[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/basic_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://scr/trigger_dialouge.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.0901, 141.239 )

[node name="trigger_dialouge" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="dialouge_container" type="PanelContainer" parent="."]
margin_right = 300.0
margin_bottom = 200.0
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="box_container" type="VBoxContainer" parent="dialouge_container"]
margin_left = 7.0
margin_top = 7.0
margin_right = 293.0
margin_bottom = 193.0
custom_constants/separation = 20

[node name="ScrollContainer" type="ScrollContainer" parent="dialouge_container/box_container"]
margin_right = 286.0
margin_bottom = 134.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dialouge_label" type="Label" parent="dialouge_container/box_container/ScrollContainer"]
margin_right = 286.0
margin_bottom = 84.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 1 )
text = "Witaj podróżniku.
Jak się czujesz?
Mam nadzieję że dobrze."
autowrap = true

[node name="next_button" type="Button" parent="dialouge_container/box_container"]
margin_left = 100.0
margin_top = 154.0
margin_right = 186.0
margin_bottom = 186.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = ExtResource( 1 )
text = "NEXT >>"
[connection signal="area_entered" from="." to="." method="_on_trigger_dialouge_area_entered"]
[connection signal="pressed" from="dialouge_container/box_container/next_button" to="." method="_on_next_button_pressed"]
